--- a/res/xml/piggie_widget.xml
+++ b/res/xml/piggie_widget.xml
@@ -17,6 +17,6 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="72dip"
     android:minHeight="146dip"
-    android:updatePeriodMillis="86400000"
-    android:initialLayout="@layout/piggie_layout"
+    android:updatePeriodMillis="0"
+    android:initialLayout="@layout/piggie_widget_container"
     />
